[package]
name = "meme"
version = "1.0.0"
authors = ["Paul Houghton <paulirotta@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
num-traits = "0.2"
arr_macro = "0.1"
svg = "0.6"
log4rs = "0.10"
csv = "1.1"
chrono = "0.4"

# Uncomment this block unless targeting ARM
quicksilver = {git = "https://github.com/paulirotta/quicksilver.git", branch = "modified-version-0.3"}
mandala = {git = "https://github.com/N-of-1/mandala.git", branch = "k-demo"}

# Uncomment this block if targeting ARM
#quicksilver = {git = "https://github.com/paulirotta/quicksilver.git", branch="arm_image_fix_and_add"}
#mandala = {git = "https://github.com/N-of-1/mandala.git", branch="arm", version = "1.0"}

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# meme-machine-database = {git = "https://github.com/N-of-1/meme-machine-database.git", version = "0.2.0"}
nannou_osc = "0.1"
env_logger = "0.7"
ws = "0.9"

[target.'cfg(target_arch = "wasm32")'.dependencies]
web_logger = { version = "0.2" }

[target.'cfg(target_arch = "aarch64")'.dependencies]
rppal = "0.11"

[target.'cfg(target_os = "linux")'.dependencies]
thread-priority = "0.1"
